--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,9 +17,8 @@
   -->
 </div>
 
-<div class="content" role="main">
-
-  <app-enigme [idEnigme]=selectedEnigmePerMonth?.id></app-enigme>
+<div class="content containerEnigme" role="main">
+  <app-enigme [idEnigme]=selectedEnigmePerMonth?.id class="appEnigmeContainer"></app-enigme>
   
 </div>
 
