--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -41,7 +41,7 @@ p {
 .content {
   display: flex;
   margin: 82px auto 32px;
-  padding: 0 16px;
+
   max-width: 960px;
   flex-direction: column;
   align-items: center;
@@ -89,7 +89,7 @@ p {
 
 .card-container .card:not(.highlight-card):hover {
   transform: translateY(-3px);
-  box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
+  /*box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);*/
 }
 
 .card-container .card:not(.highlight-card):hover .material-icons path {
@@ -231,4 +231,12 @@ svg#clouds {
     display: none;
     visibility: hidden;
   }
+}
+
+.appEnigmeContainer {
+  border: 5px solid rgba(25, 117, 210, 0.65);
+  border-radius: 33px;
+  padding: 1em 2em 2em 2em;
+  z-index: 10;
+  background-color: #f5f9ff;
 }
