--- a/src/app/enigme/enigme.component.html
+++ b/src/app/enigme/enigme.component.html
@@ -6,7 +6,7 @@
         Quoi ? Vous vous imaginiez tranquillement préparer cet évènement ? eh bien non !</p>
     <p>Afin d’agrémenter cette organisation, vous débloquerez, chaque mois une nouvelle énigme.<br>
         En résolvant, cette énigme, vous obtiendrez un mot de passe qui permettra, une fois validé,
-        de commencer votre géo-caching du mois.
+        de commencer votre géo-caching du mois. Les énigmes sont accessibles via le bouton "Enigmes".
     </p>
     <p>Rendez-vous à l’endroit indiqué par les coordonnées GPS, nous aurons caché un objet contenant des
         instructions.<br>
